<resources>
    <string name="app_name">SAPC</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="erro_no_login">Erro no login</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="logout">Logout</string>
    <string name="buscar_usu_rio">Buscar usuário</string>
    <string name="clique_aqui_para_cadastrar_se">Clique aqui para cadastrar-se</string>
    <string name="cadastrar">cadastrar</string>
</resources>